Tue Jul 27 18:33:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defines.h, intern.h, missing.h, ruby.h, st.h, util.h: include
	  config.h and defines.h for autoconf macros.

Mon Jul 26 18:18:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (config.h): add include guard.

	* win32/Makefile.sub, bcc32/Makefile.sub (config.h): ditto.

Sat Jul 24 15:44:29 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (fev_initialize): initialize pTypeInfo.
	  [ruby-core:31304][Bug #3576].

Tue Jul 13 21:46:38 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_config.c, ext/openssl/lib/openssl/config.rb,
	  ext/openssl/lib/openssl.rb: reimplement OpenSSL::Config in Ruby. Now
	  it should work on windows.

	* test/openssl/test_config.rb: added tests for OpenSSL::Config#dup.

Mon Jul 12 22:26:00 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_config.c (ossl_config_copy): wrongly updating the
	  given object with uninitialized CONF data.  now
	  OpenSSL::Config#clone works as expected; cloning the config instead of
	  SEGV or empty definition.

	* test/openssl/test_config.rb: added tests for Config#clone.

Sat Jul 10 10:51:29 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: fix use_context condition inversion.
	[Bug #2553][ruby-core:31164]. Thanks, Andre Nathan. 

Fri Jul  9 23:31:26 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/openssl/test_config.rb: more tests for parse_config formats.

Thu Jul  8 23:12:30 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/openssl/test_config.rb: test_s_parse_format added in the
	  prvious commit fails for all OpenSSL implementations.  fixed the
	  test. tested against OpenSSL 1.0.0a and OpenSSL 0.9.8o.

Thu Jul  8 21:10:36 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/openssl/test_config.rb: added tests for class methods, 
	  constants and parse format of OpenSSL itself.
