@@ -1,5 +1,7 @@
 /* public domain rewrite of finite(3) */
 
+#include "missing.h"
+
 int
 finite(n)
     double n;
